roles/servers/files/10.32.10.83/iptables
# Generated by iptables-save v1.3.5 on Mon Dec 19 10:59:01 2011
*nat
:PREROUTING ACCEPT [120:16660]
:POSTROUTING ACCEPT [109:12489]
:OUTPUT ACCEPT [109:12489]
# Prerouting Rules
-A PREROUTING -d 10.32.10.83 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.32.10.85:8443
-A PREROUTING -d 10.32.10.83 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.32.10.85:8080
# Optional rules
-A PREROUTING -d 127.0.0.1 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.32.10.85:8443
-A PREROUTING -d 127.0.0.1 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.32.10.85:8080
# Output Rules
-A OUTPUT -d 10.32.10.83 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443
-A OUTPUT -d 10.32.10.83 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
# Optional rules
-A OUTPUT -d 127.0.0.1 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443
-A OUTPUT -d 127.0.0.1 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
COMMIT
# Completed on Mon Dec 19 10:59:01 2011
# Generated by iptables-save v1.3.5 on Mon Dec 19 10:59:01 2011

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING - [0:0]

###################################### INPUT RULES ############################################

########################################## Mandatory ##########################################    
## Allow from loopback
-A INPUT -i lo -j ACCEPT

## Allow input that the output has been established
-A INPUT -m state --state ESTABLISHED -j ACCEPT

## Allow ICMP packets
-A INPUT -p icmp --icmp-type 11 -j ACCEPT
###############################################################################################

#-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

## Allow SSH Access from Admin VLAN and Monitoring Server
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.180 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SSH Acess from dev-manager
-A INPUT -s 10.32.14.50 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

#allow from 10.32.6.242 -- March 10th, 2015 --MULYADI--
-A INPUT -s 10.32.6.242 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SMS Status Updates from waigama/majapahit
-A INPUT -s 10.32.10.8 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.25 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.110 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow MySQLDump access from Arun
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SNMP from Monitoring Server
-A INPUT -s 10.32.16.179 -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow MySQL Access From Jethro Workstation
-A INPUT -s 10.32.14.82 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Monit Access from Admin VLAN
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.82 -p tcp -m tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.110 -p tcp -m tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.200 -p tcp -m tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow http/s Access from any
-A INPUT -p tcp -m multiport --dport 80,443,8080,8443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow http/s OMA Access from any
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.6.3/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.0/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.4.1/255.255.255.255 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow WSREP galera from democ and garbd
-A INPUT -s 10.32.10.80 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.104 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.106 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.17 -p tcp -m tcp -j ACCEPT

## Log the rest
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Incoming Dropped: " --log-level 5
-A LOGGING -j DROP

###################################### OUTPUT RULES ############################################

########################################## Mandatory ###########################################    
## Allow output from loopback
-A OUTPUT -o lo -j ACCEPT 

## Allow output that the input has been established
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m state --state ESTABLISHED -j ACCEPT 

## Allow ping outside
-A OUTPUT -p icmp -j ACCEPT
###############################################################################################

## Allow output to smtp relay smtp(tcp/25)
-A OUTPUT -d 10.32.10.11 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to cell db provider http(tcp/80) and https(tcp/443)
#-A OUTPUT -d location-api.com -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A OUTPUT -d www.google.com -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to ismsc service http(tcp/80) and https(tcp/443)
-A OUTPUT -d 80.66.224.224/255.255.255.248 -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.6.59 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to service hosts for service domain(tcp/53), ntp(tcp/123), http(tcp/80), and https(tcp/443)
-A OUTPUT -d 10.32.10.52 -p udp -m multiport --dports 53,123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.53 -p udp -m multiport --dports 53,123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.15.190 -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.15.250 -p udp -m multiport --dports 53,123 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to queue latin(tcp/22021) and unicode(tcp/22022) of queue server
-A OUTPUT -d 10.32.10.200 -p tcp -m multiport --dports 22021,22022 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow WSREP galera to demox and garbd
-A OUTPUT -d 10.32.10.80 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 10.32.10.104 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 10.32.10.106 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 10.32.10.17 -p tcp -m tcp -j ACCEPT

## Allow Send Logs to Syslog Server
-A OUTPUT -d 10.32.100.18 -p tcp -m tcp --dport 11 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.100.18 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -d 10.32.100.18 -p tcp -m multiport --dports 20301:20320 -j ACCEPT

-A OUTPUT -d 10.32.10.17 -p tcp -m tcp --dport 2812 -j ACCEPT

## Allow Output to ismsc Manager
-A OUTPUT -d 10.32.10.91 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT


## Loggin the rest
-A OUTPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Outgoing Dropped: " --log-level 5
-A LOGGING -j DROP

## Must commit
COMMIT
# Completed on Mon Dec 19 10:59:01 2011
